deploy/istio/service-deployment.yaml
##################################################################################################
# SRV_1 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mm-example-srv-1
  labels:
    app: mm-example-srv-1
spec:
  ports:
  - port: 9080
    name: grpc
  selector:
    app: mm-example-srv-1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mm-example-srv-1-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mm-example-srv-1
        version: v1
    spec:
      containers:
      - name: mm-example-srv-1
        command: [
          "/main",
          "-serve_addr=:9080",
          "-remote_addr=:9080"
        ]
        image: hbchen/micro-mesh-example-srv-1:v0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# SRV_2 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mm-example-srv-2
  labels:
    app: mm-example-srv-2
spec:
  ports:
  - port: 9080
    name: grpc
  selector:
    app: mm-example-srv-2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mm-example-srv-2-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mm-example-srv-2
        version: v1
    spec:
      containers:
      - name: mm-example-srv-2
        command: [
          "/main",
          "-serve_addr=:9080",
          "-remote_addr=:9080"
        ]
        image: hbchen/micro-mesh-example-srv-2:v0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# API service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: mm-example-api
  labels:
    app: mm-example-api
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: mm-example-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mm-example-api-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mm-example-api
        version: v1
    spec:
      containers:
      - name: mm-example-api
        command: [
          "/main",
          "-serve_addr=:9080",
          "-remote_addr=:9080"
        ]
        image: hbchen/micro-mesh-example-api:v0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
