deploy/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mm-example-api
spec:
  hosts:
  - mm-example-api
  http:
  - route:
    - destination:
        host: mm-example-api
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mm-example-srv-1
spec:
  hosts:
  - mm-example-srv-1
  http:
  - route:
    - destination:
        host: mm-example-srv-1
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mm-example-srv-2
spec:
  hosts:
  - mm-example-srv-2
  http:
  - route:
    - destination:
        host: mm-example-srv-2
        subset: v1
